Added some functionality

--- a/cmd1/templates/cmd1/activity_component.html
+++ b/cmd1/templates/cmd1/activity_component.html
@@ -1,7 +1,23 @@
+{% load static %}
+
 <div class="activities">
     <div class="activities__header">
         <h2>Recent Activities</h2>
     </div>
+    <div class="activities__boxHeader roomListRoom__header">
+        <a href="{% url 'user-profile' user.id %}" class="roomListRoom__author">
+            <div class="avatar avatar--small">
+            <img src="{% static 'my_image/original_164dc44f-c9ed-44af-ab9a-388cbfa21e99_PXL_20210701_171329009.PORTRAIT.jpg' %}"/>
+            </div>
+            <p>
+            @sameer
+            </p>
+            <small>
+                web owner
+            </small>
+        </a>
+      </div>
+      This is dummy data
     {% for message in room_messages %}
     <div class="activities__box">
         <div class="activities__boxHeader roomListRoom__header">
