--- a/cmd1/templates/cmd1/home.html
+++ b/cmd1/templates/cmd1/home.html
@@ -18,8 +18,8 @@
             {% include 'cmd1/search_bar.html' %}
 
             <div class="mobile-menuItems">
-            <a class="btn btn--main btn--pill" href="#">Browse Topics</a>
-            <a class="btn btn--main btn--pill" href="#">Recent Activities</a>
+            <a class="btn btn--main btn--pill" href="{% url 'topics' %}">Browse Topics</a>
+            <a class="btn btn--main btn--pill" href="{% url 'activity' %}">Recent Activities</a>
             </div>
         </div>
 
