--- a/cmd1/templates/cmd1/detail-room.html
+++ b/cmd1/templates/cmd1/detail-room.html
@@ -21,7 +21,7 @@
         </a>
 
         <div class="roomListRoom__actions">
-            <span>{{ room.calculate_time }}</span>
+            <span>{{ room.room_created }}</span>
         </div>
     </div>
     <div class="roomListRoom__content">
