--- a/cmd1/templates/cmd1/user_rooms.html
+++ b/cmd1/templates/cmd1/user_rooms.html
@@ -9,7 +9,7 @@
             </a>
             <div class="roomListRoom__actions">
                 <!-- <span>{{ room.date_posted|date:'F d, Y' }}</span> -->
-                <span>{{ room.calculate_time }}</span>
+                <span>{{ room.room_created }}</span>
             </div>
         </div>
         <div class="roomListRoom__content">
