--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -13,7 +13,7 @@
             <div class="profile">
             <div class="profile__avatar">
                 <div class="avatar avatar--large active">
-                <img src="{{ user.profile.image.url }}"/>
+                <img src="{{ request.user.profile.avatar.url }}"/>
                 </div>
             </div>
             <div class="profile__info">
