--- a/cmd1/templates/cmd1/feed_component.html
+++ b/cmd1/templates/cmd1/feed_component.html
@@ -8,8 +8,7 @@
                 <span>@{{ room.host }}</span>
             </a>
             <div class="roomListRoom__actions">
-                <span>{{ room.date_posted | timesince }}</span>
-                <!-- <span>{{ room.date_posted|date:'F d, Y' }}</span> -->
+                <span>{{ room.room_created }}</span>
             </div>
         </div>
         <div class="roomListRoom__content">
